tests/ui/privacy/union-field-privacy-2.stderr
error[E0616]: field `c` of union `U` is private
  --> $DIR/union-field-privacy-2.rs:14:15
   |
LL |     let c = u.c;
   |               ^ private field

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0616`.
